crates/oxc_react_compiler/tests/snapshots/while-break.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/while-break.js
---
function foo(a, b) {
	while (a) {
		break;
	}
	return b;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
