crates/oxc_react_compiler/tests/snapshots/while-conditional-continue.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/while-conditional-continue.js
---
function foo(a, b, c, d) {
	while (a) {
		if (b) {
			continue;
		}
		c();
	}
	d();
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
