crates/oxc_react_compiler/tests/snapshots/while-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/while-logical.js
---
function foo(props) {
	let x = 0;
	while (x > props.min && x < props.max) {
		x = x * 2;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
