crates/oxc_react_compiler/tests/snapshots/while-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/while-property.js
---
function foo(a, b) {
	let x = 0;
	while (a.b.c) {
		x = x + b;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
