crates/oxc_react_compiler/tests/snapshots/while-with-assignment-in-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/while-with-assignment-in-test.js
---
// @enablePreserveExistingMemoizationGuarantees:false
function Component() {
	const queue = [
		1,
		2,
		3
	];
	let value;
	let sum = 0;
	while ((value = queue.pop()) != null) {
		sum = sum + value;
	}
	return sum;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
